--- a/relatorios/produtos.jrxml
+++ b/relatorios/produtos.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.12.2.final using JasperReports Library version 6.12.2-75c5e90a222ab406e416cbf590a5397028a52de3  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="produtos" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c3f986a0-194a-4946-a03f-86dd6a3404fc">
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Restaurante"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="relatorio" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c3f986a0-194a-4946-a03f-86dd6a3404fc">
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Loja_banco"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
 		<box>
@@ -62,7 +62,7 @@
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Restaurante"/>
 		<parameter name="empresa" class="java.lang.Integer"/>
 		<queryString language="SQL">
-			<![CDATA[SELECT proCodigo, proNome, proQuantidade from restaurante.produto
+			<![CDATA[SELECT proCodigo, proNome, proQuantidade from produto
 				where pro_empCodigo = $P{empresa}]]>
 		</queryString>
 		<field name="proCodigo" class="java.lang.Integer">
@@ -80,7 +80,7 @@
 	</subDataset>
 	<parameter name="empresa" class="java.lang.Integer"/>
 	<queryString>
-		<![CDATA[SELECT proCodigo, proNome, proQuantidade from restaurante.produto
+		<![CDATA[SELECT proCodigo, proNome, proQuantidade from produto
 where  pro_empCodigo = $P{empresa}]]>
 	</queryString>
 	<field name="proCodigo" class="java.lang.Integer">
